--- a/src/index.css
+++ b/src/index.css
@@ -31,17 +31,14 @@ p {
   margin: 0 auto;
   text-align: center;
 }
-.container p {
-  font-size: 3em;
-}
 
-.container Button {
-  font-size: 2.1em;
-  padding: 0 5%;
-  margin: 0 60px;
-  background-color: red;
+.card {
+  width: 100%;
+  margin: 30px 0;
 }
-
-img {
-  width: 30%;
+.card img {
+  height: 200px;
+}
+.MuiCardMedia-root {
+  float: left;
 }
