--- a/src/index.css
+++ b/src/index.css
@@ -33,12 +33,20 @@ p {
 }
 
 .card {
-  width: 100%;
-  margin: 30px 0;
+  width: 90%;
+  margin-top: 30px;
 }
 .card img {
   height: 200px;
 }
+.cardContent {
+  width: 80%;
+}
 .MuiCardMedia-root {
   float: left;
+}
+
+
+.gridList img {
+  width: 50%;
 }
