--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,11 @@ body {
   padding: 0;
 }
 
+a {
+text-decoration: none;
+}
+
+
 h1 {
   padding-top: 40px;
   text-align:center;
@@ -26,6 +31,15 @@ p {
   text-align:center;
 }
 
+header {
+  width: 100%;
+  background-color: #555;
+}
+header a {
+  font-size: 2em;
+  line-height: 80px;
+  color: #fff;
+}
 
 .container {
   margin: 0 auto;
@@ -47,6 +61,15 @@ p {
 }
 
 
+/* シリーズ窓のheight */
+.gridList {
+  height: 400px;
+}
 .gridList img {
-  width: 50%;
+  width: 60%;
+  height: auto;
+}
+
+.gridListTile {
+  height: 400px;
 }
