--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@ p {
 header {
   width: 100%;
   background-color: #555;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.26);
   position: sticky;
   top: 0;
   z-index: 100;
@@ -71,9 +72,12 @@ header a {
 */
 
 /* ここからBookSeries */
+.gridList {
+}
 .gridList img {
   width: 60%;
   height: auto;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.26);
 }
 
 .gridListTile {
