--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ p {
 header {
   width: 100%;
   background-color: #555;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.26);
+  box-shadow: 0 4px 12px rgba(0,0,0,.3);
   position: sticky;
   top: 0;
   z-index: 100;
@@ -50,7 +50,9 @@ header a {
   margin: 0 auto;
   text-align: center;
 }
-
+.shadow {
+  box-shadow: 0 3px 10px 1px rgba(0,0,0,.48);
+}
 
 /* ここからLibrary */
 .card {
@@ -68,6 +70,7 @@ header a {
 }
 .routeBook img {
   width: 100%;
+  box-shadow: 0 2px 10px rgba(0,0,0,.2)
 }
 
 .routeBookDesc {
@@ -97,8 +100,13 @@ header a {
 }
 .gridListTile img {
   width: 60%;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.26);
+  /*box-shadow: 0 2px 10px rgba(0,0,0,.2);*/
+  transition: .2s;
 }
+/*
+.gridListTile img:hover {
+  opacity: 0.5;
+}*/
 .MuiCardMedia-root {
   float: left;
 }
