--- a/src/index.css
+++ b/src/index.css
@@ -108,3 +108,15 @@ header a {
 .MuiCardMedia-root {
   float: left;
 }
+
+/* ここからBookShow */
+.readContainer {
+  width: 80%;
+  max-height: 100%;
+  margin: auto;
+}
+.readContainer img {
+  width: 50%;
+  float: left;
+  margin-top: 30px;
+}
