--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 html {
-  font: 100% / 1.5 "Lato", "Hiragino Maru Gothic Pro", "Meiryo UI", Meiryo, "MS PGothic", sans-serif;
+  font-family: 'Noto Sans JP', sans-serif;
+  font: 100% / 1.5 'Noto Sans JP', sans-serif;
   background: #f9fbfe;
 }
 
@@ -8,7 +9,7 @@ a {
 }
 
 h1, h2, h3, h4, h5, h6, p, div {
-   font-weight: normal;
+  font-weight: normal;
 }
 
 h1 {
@@ -42,6 +43,10 @@ header a {
   line-height: 80px;
   color: #fff;
 }
+header a:hover {
+  opacity: .5;
+  transition: .2s;
+}
 
 
 .container {
@@ -50,6 +55,13 @@ header a {
 }
 .shadow {
   box-shadow: 0 3px 10px 1px rgba(0,0,0,.48);
+}
+.frame {
+  padding: 7px;
+  border: 1px solid #ccc;
+  background: #fff;
+  box-shadow: 3px 2px 4px rgba(0,0,0,0.3);
+  box-sizing: border-box;
 }
 
 /* ここからLibrary */
@@ -60,6 +72,7 @@ header a {
 }
 .cardContent {
   width: 100%;
+  display: flex;
 }
 
 .routeBook {
@@ -84,9 +97,13 @@ header a {
 .desc {
   padding: 10px 20px;
 }
+.descContainer {
+  width: 80%;
+  margin: 30px auto;
+}
 
 .readButton {
-  margin: 0 auto;
+  margin: auto;
 }
 
 /* ここからBookSeries */
@@ -95,16 +112,19 @@ header a {
 }
 .gridListTile {
   margin-top: 30px;
+  background: #f1f1f1;
+  color: #4DD0E1;
 }
 .gridListTile img {
-  width: 60%;
-  /*box-shadow: 0 2px 10px rgba(0,0,0,.2);*/
+  /*width: 60%;*/
+  display: inline-block;
+}
+
+
+.gridListTileLink:hover {
+  opacity: .5;
   transition: .2s;
 }
-/*
-.gridListTile img:hover {
-  opacity: 0.5;
-}*/
 .MuiCardMedia-root {
   float: left;
 }
@@ -112,11 +132,13 @@ header a {
 /* ここからBookShow */
 .readContainer {
   width: 80%;
-  max-height: 100%;
+  height: 85vh;
   margin: auto;
+  margin-top: 30px;
 }
 .readContainer img {
-  width: 50%;
-  float: left;
-  margin-top: 30px;
+  width:auto;
+  height:auto;
+  max-width:100%;
+  max-height:100%;
 }
